Fix hover effect on mobile for ask AI button

--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -95,7 +95,7 @@
     .kapa-widget-button {
       border-radius: 50%;
       padding: 0;
-      margin-right: 4px;
+      padding-right: 4px;
     }
   }
 }
